@@ -212,6 +212,8 @@
 			</xs:attribute>
 			<xs:attribute name="negate_pos" type="binaryYesNo" use="optional"
 				default="no" />
+            <xs:attribute name="case_sensitive" type="binaryYesNo"
+                      use="optional" />
 		</xs:complexType>
 	</xs:element>
 
@@ -275,6 +277,8 @@
 				default="no" />
 			<xs:attribute name="negate" type="binaryYesNo" use="optional"
 				default="no" />
+            <xs:attribute name="case_sensitive" type="binaryYesNo"
+                          use="optional" />
 		</xs:complexType>
 	</xs:element>
  
