@@ -7431,7 +7431,7 @@ $Id: disambiguation.xml,v 1.31 2011-02-13 12:30:11 milek_pl Exp $
                 <token>Sz</token>
             </marker>
             <token>.</token>
-            <token inflected="yes" regexp="yes">(?iu)Pani?</token>
+            <token inflected="yes" regexp="yes" case_sensitive="no">Pani?</token>
         </pattern>
         <disambig action="ignore_spelling"/>
     </rule>
